# dSync

./: CMakeLists.txt  Makefile  README.md
src/server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
